Fixed spacing issue for projects auto grid

--- a/css/style.css
+++ b/css/style.css
@@ -228,7 +228,7 @@ b {
 
 .grid-auto-fit {
   display: grid;
-  grid-gap: 1rem;
+  grid-gap: 1.5rem;
   grid-template-columns: repeat(auto-fit, minmax(min(100%, 250px), 1fr));
 }
 
